fixed layout issue in gallery

--- a/app/design/frontend/RVDesign/autostacker/web/css/source/_page_extends.less
+++ b/app/design/frontend/RVDesign/autostacker/web/css/source/_page_extends.less
@@ -12,7 +12,7 @@
 
   .col-main {
     float: left;
-    width: 75%;
+    width: 100%;
   }
 
 }
